--- a/composer.json
+++ b/composer.json
@@ -5,16 +5,28 @@
     "php": ">=5.4",
     "silex/silex": "1.3.*@stable"
   },
+  "require-dev":{
+    "phpunit/phpunit":"5.1.*@stable"
+  },
   "type": "library",
   "version": "1.0",
   "license": "MIT",
   "authors": [
-  {
-    "name": "Estevam de Moraes Rodrigues",
-    "email": "estevam.mrodrigues@gmail.com"
-  }],
+    {
+      "name": "Estevam de Moraes Rodrigues",
+      "email": "estevam.mrodrigues@gmail.com"
+    }
+  ],
   "minimum-stability": "dev",
   "autoload": {
-    "psr-4": {"Estevam\\SON\\": "src/Estevam/SON"}
+    "psr-4": {"Estevam\\SON\\": 
+      [
+        "src/Estevam/SON",
+        "tests/Estevam/SON"
+      ]
+    }
+  },
+  "config": {
+    "bin-dir": "bin/"
   }
 }
